@@ -19,28 +19,38 @@ import java.util.stream.Stream;
 public class SwarmNode {
     private final String healthy;
     private final String name;
+    private final String role;
     private final long totalCPUs;
     private final long totalMemory;
     private final List<Task> tasks;
 
     public SwarmNode(final Node node, final List<Task> tasks) {
-        this.name = String.format("%s( %s)" ,node.Description.Hostname,node.Spec.Role);
+        this.name = node.Description.Hostname;
+        this.role = node.Spec.Role;
         this.healthy = node.Status.State;
         this.totalCPUs = nanoToCpu(node.Description.Resources.NanoCPUs);
-        this.totalMemory = Bytes.toMB( node.Description.Resources.MemoryBytes) ;
+        this.totalMemory = Bytes.toMB(node.Description.Resources.MemoryBytes);
         this.tasks = tasks;
     }
 
-    private long nanoToCpu(long nanoCPUs ) {
-        return nanoCPUs /1000000000;
+    private long nanoToCpu(long nanoCPUs) {
+        return nanoCPUs / 1000000000;
     }
 
     public String getName() {
         return this.name;
     }
 
+    public String getRole() {
+        return this.role;
+    }
+
     public boolean isHealthy() {
         return this.healthy == "ready";
+    }
+
+    public boolean isIdle() {
+            return getCurrentBuilds().length == 0 && getUnknownRunningTasks().length == 0;
     }
 
     public long getComputerCount() {
@@ -49,34 +59,32 @@ public class SwarmNode {
 
     public Object[] getCurrentBuilds() {
         final Jenkins jenkins = Jenkins.getInstance();
-        return getTasksWithRuns(jenkins)
-                .map(task ->  getComputer(jenkins, task).getCurrentBuild())
-                .toArray();
+        return getTasksWithRuns(jenkins).map(task -> getComputer(jenkins, task).getCurrentBuild()).toArray();
     }
 
-
-    public Task[] getUnknownRunningTasks(){
+    public Task[] getUnknownRunningTasks() {
         final Jenkins jenkins = Jenkins.getInstance();
-       return this.tasks.stream().filter(task -> getComputer(jenkins, task)==null && task.Status.isRunning() ).toArray(Task[]::new);
+        return this.tasks.stream().filter(task -> getComputer(jenkins, task) == null && task.Status.isRunning())
+                .toArray(Task[]::new);
     }
 
-    public Map<Task,Run> getTaskRunMap(){
+    public Map<Task, Run> getTaskRunMap() {
         final Jenkins jenkins = Jenkins.getInstance();
-        Map<Task,Run> map = new HashMap<>();
-        getTasksWithRuns(jenkins).forEach(task -> map.put(task,(Run)getComputer(jenkins,task).getCurrentBuild()) );
+        Map<Task, Run> map = new HashMap<>();
+        getTasksWithRuns(jenkins).forEach(task -> map.put(task, (Run) getComputer(jenkins, task).getCurrentBuild()));
         return map;
     }
 
     private Stream<Task> getTasksWithRuns(Jenkins jenkins) {
         return this.tasks.stream().filter(task -> {
             Computer computer = getComputer(jenkins, task);
-            return computer != null && computer instanceof DockerSwarmComputer && ((DockerSwarmComputer) computer).getCurrentBuild() instanceof  Run;
-        } );
+            return computer != null && computer instanceof DockerSwarmComputer
+                    && ((DockerSwarmComputer) computer).getCurrentBuild() instanceof Run;
+        });
     }
 
-
     private DockerSwarmComputer getComputer(Jenkins jenkins, Task task) {
-        return (DockerSwarmComputer) jenkins.getComputer("agent-"+task.Spec.getComputerName());
+        return (DockerSwarmComputer) jenkins.getComputer("agent-" + task.Spec.getComputerName());
     }
 
     public long getTotalCPUs() {
@@ -87,35 +95,39 @@ public class SwarmNode {
         return totalMemory;
     }
 
-    public float getCPUPercentFull(){
-         return 100 - (getTotalCPUs() - getReservedCPUs())/new Float(getTotalCPUs()) * 100;
+    public float getCPUPercentFull() {
+        return 100 - (getTotalCPUs() - getReservedCPUs()) / Float.valueOf(getTotalCPUs()) * 100;
     }
-
 
     public Stream<String> getComputers() {
         return tasks.stream().map(task -> task.Spec.getComputerName());
     }
 
     public Long getReservedCPUs() {
-        return nanoToCpu( tasks.stream().filter(task ->  task.Status.isRunning()).map(task -> task.Spec.Resources.Reservations.NanoCPUs).reduce(0l, Long::sum));
+        return nanoToCpu(tasks.stream().filter(task -> task.Status.isRunning())
+                .map(task -> task.Spec.Resources.Reservations.NanoCPUs).reduce(0l, Long::sum));
     }
+
     public Long getReservedMemory() {
-        return Bytes.toMB( tasks.stream().filter(task ->  task.Status.isRunning()).map(task -> task.Spec.Resources.Reservations.MemoryBytes).reduce(0l, Long::sum));
+        return Bytes.toMB(tasks.stream().filter(task -> task.Status.isRunning())
+                .map(task -> task.Spec.Resources.Reservations.MemoryBytes).reduce(0l, Long::sum));
     }
-    public String getCpuUsageJson(){
+
+    public String getCpuUsageJson() {
         final ArrayList<Object> usage = new ArrayList<>();
         usage.add(Arrays.asList("type", "used"));
-        usage.add(Arrays.asList("empty",getTotalCPUs() - getReservedCPUs()));
-        usage.add(Arrays.asList("reserved",getReservedCPUs()));
+        usage.add(Arrays.asList("empty", getTotalCPUs() - getReservedCPUs()));
+        usage.add(Arrays.asList("reserved", getReservedCPUs()));
         final JSONArray mJSONArray = new JSONArray();
         mJSONArray.addAll(usage);
         return mJSONArray.toString();
     }
-    public String getMemoryUsageJson(){
+
+    public String getMemoryUsageJson() {
         final ArrayList<Object> usage = new ArrayList<>();
         usage.add(Arrays.asList("type", "used"));
-        usage.add(Arrays.asList("empty",getTotalMemory() - getReservedMemory()));
-        usage.add(Arrays.asList("reserved",getReservedMemory()));
+        usage.add(Arrays.asList("empty", getTotalMemory() - getReservedMemory()));
+        usage.add(Arrays.asList("reserved", getReservedMemory()));
         final JSONArray mJSONArray = new JSONArray();
         mJSONArray.addAll(usage);
         return mJSONArray.toString();
